# docker-app--theia

./: .gitignore  README.md  host.env
docker-compose/server--theia/: default.docker-compose
docker/server--theia/: default.docker
docker/server--theia/rootfs/etc/talsen/: dojo.bash
docker/server--theia/rootfs/etc/talsen/assets/cpp-template/: .lcovignore  meson.build
docker/server--theia/rootfs/etc/talsen/assets/cpp-template/.workspace/.gunit/: meson.build
docker/server--theia/rootfs/etc/talsen/assets/cpp-template/.workspace/.gunit/src/: DummyBehavior.cpp  example-behavior.cpp  tests.cpp
docker/server--theia/rootfs/etc/talsen/assets/csharp-template/: .gitignore
docker/server--theia/rootfs/etc/talsen/assets/typescript-template/: package.json
docker/server--theia/rootfs/etc/talsen/command/: build.bash  cheat.bash  clone.bash  duplicate-workspace.bash  fizzbuzz.bash  focus-on.bash  focus.bash  init-cpp.bash  init-csharp.bash  init.bash  new-workspace.bash  url.bash
docker/server--theia/rootfs/etc/talsen/config/: clone-base-url.bash  workspace-base-url.bash
docker/server--theia/rootfs/etc/talsen/focus/: cpp.foci
docker/server--theia/rootfs/etc/talsen/strategy/cheat/: cpp.bash  csharp.bash  plantuml.bash  typescript.bash
docker/server--theia/rootfs/etc/talsen/strategy/clean/: csharp.bash
docker/server--theia/rootfs/etc/talsen/strategy/init/: c.bash  cpp.bash  csharp.bash  plantuml.bash  typescript.bash
docker/server--theia/rootfs/etc/talsen/strategy/rebuild/: cpp.bash  csharp.bash
docker/server--theia/rootfs/etc/talsen/util/: detect-script-dir.bash
docker/server--theia/rootfs/etc/talsen/util/indicator/: workspace-build-focus-indicator.bash  workspace-cpp-flags-coverage-indicator.bash  workspace-cpp-flags-coverage-strict-indicator.bash  workspace-cpp-flags-coverage-strict.bash  workspace-cpp-flags-coverage.bash  workspace-cpp-flags-default-indicator.bash  workspace-cpp-flags-implementation-indicator.bash  workspace-cpp-flags-implementation-strict-indicator.bash  workspace-cpp-flags-thread-sanitizer-indicator.bash  workspace-gunit-lib-indicator.bash  workspace-meson-options-indicator.bash  workspace-name-indicator.bash  (+2 more)
docker/server--theia/rootfs/opt/: entrypoint.bash
(+9 files in other folders)
